# Nifty-Bot

./: .gitignore  BACKEND_ISSUES_ANALYSIS.md  EMA_CALCULATION_ANALYSIS.md  EMA_VERIFICATION_REPORT.md  FIXES_APPLIED.md  GREEKS_CALCULATION_VERIFIED.md  GREEKS_DATA_SOURCE.md  IMPLEMENTATION_COMPLETE.md  INTERVAL_FORMAT_FIX.md  PCR_FIX_APPLIED.md  PCR_FIX_SUMMARY.md  PCR_ISSUE_ROOT_CAUSE.md  README.md  SIGNAL_GENERATION_FIXES.md  WEBSOCKET_PCR_IMPLEMENTATION.md  WEBSOCKET_V3_LIMITS.md  debug_ema_calculation.py  diagnose_pcr.py  docker-compose.yml  start_system.sh  task-definition.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  apply_pcr_fix.py  debug_api_data.py  debug_output.txt  debug_output_30days.txt  dump_intraday.py  fix_pcr.py  fix_pcr_key_matching.py  fix_pcr_oi_extraction.py  fix_pcr_use_quotes.py  fix_v3_url.py  get_final_ema.py  main.py  probe_api.py  pyproject.toml  reproduce_ema.py  requirements.txt  server.py  train_model.py  update_to_v3.py  uv.yaml  verify_ema_external.py  verify_point.py  verify_screenshot_2.py
backend/app/: __init__.py  debug_streamer.py
backend/app/core/: authentication.py  config.py  greeks.py  greeks_validator.py  logger_config.py  market_data.py  models.py  option_chain.py  (+9 more)
backend/tests/: conftest.py  test_backtester.py  test_example.py  test_greeks.py  test_greeks_validator.py  test_iv_rank_stability.py  test_json_utils.py  test_option_data_handler.py  test_paper_trading.py  test_pcr_calculator.py  test_position_manager.py  test_risk_manager.py  test_strategy.py  test_trailing_stop.py  test_upstox.py
(+182 files in other folders)
